--- a/site/private/components/00291/1.html
+++ b/site/private/components/00291/1.html
@@ -5,14 +5,14 @@
                             <div class="subjectCounter-part2"></div>
                         </div>
                         <div class="subjectInfo">
-                            <div class="subjectName">МДК.04.02 Обеспечение качества функционирования компьютерных систем</div>
+                            <div class="subjectName">Основы алгоритмизации и программирования</div>
                             <div class="subjectInfoPart">
                                 <div class="infoIcon">
                                     <img alt="teacher" src="./private/assets/imgs/teacher.svg">
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Преподаватель</div>
-                                    <div class="subjectInfoPartDesc">Дьякова Анастасия Константиновна</div>
+                                    <div class="subjectInfoPartDesc">Багмет Руслан Викторович</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -21,7 +21,7 @@
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Аудитория</div>
-                                    <div class="subjectInfoPartDesc">3104</div>
+                                    <div class="subjectInfoPartDesc">2207</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -42,14 +42,14 @@
                             <div class="subjectCounter-part2"></div>
                         </div>
                         <div class="subjectInfo">
-                            <div class="subjectName">Безопасность жизнедеятельности</div>
+                            <div class="subjectName">Стандартизация, сертификация и техническое документоведение</div>
                             <div class="subjectInfoPart">
                                 <div class="infoIcon">
                                     <img alt="teacher" src="./private/assets/imgs/teacher.svg">
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Преподаватель</div>
-                                    <div class="subjectInfoPartDesc">Миньков Кирилл Юрьевич</div>
+                                    <div class="subjectInfoPartDesc">Нечаева Валентина Витальевна</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -58,7 +58,7 @@
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Аудитория</div>
-                                    <div class="subjectInfoPartDesc">2410</div>
+                                    <div class="subjectInfoPartDesc">3305</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -79,14 +79,14 @@
                             <div class="subjectCounter-part2"></div>
                         </div>
                         <div class="subjectInfo">
-                            <div class="subjectName">Стандартизация, сертификация и техническое документоведение</div>
+                            <div class="subjectName">МДК.11.01 Технология разработки и защиты баз данных</div>
                             <div class="subjectInfoPart">
                                 <div class="infoIcon">
                                     <img alt="teacher" src="./private/assets/imgs/teacher.svg">
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Преподаватель</div>
-                                    <div class="subjectInfoPartDesc">Нечаева Валентина Витальевна</div>
+                                    <div class="subjectInfoPartDesc">Коренева Анастасия Павловна</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -95,7 +95,7 @@
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Аудитория</div>
-                                    <div class="subjectInfoPartDesc">1201</div>
+                                    <div class="subjectInfoPartDesc">2204</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
