--- a/site/private/components/00311/1.html
+++ b/site/private/components/00311/1.html
@@ -5,14 +5,14 @@
                             <div class="subjectCounter-part2"></div>
                         </div>
                         <div class="subjectInfo">
-                            <div class="subjectName">Основы алгоритмизации и программирования</div>
+                            <div class="subjectName">Индивидуальный проект</div>
                             <div class="subjectInfoPart">
                                 <div class="infoIcon">
                                     <img alt="teacher" src="./private/assets/imgs/teacher.svg">
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Преподаватель</div>
-                                    <div class="subjectInfoPartDesc">Коренева Анастасия Павловна</div>
+                                    <div class="subjectInfoPartDesc">Ильминский Константин Викторович</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -21,7 +21,7 @@
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Аудитория</div>
-                                    <div class="subjectInfoPartDesc">2206</div>
+                                    <div class="subjectInfoPartDesc">2316</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -42,14 +42,14 @@
                             <div class="subjectCounter-part2"></div>
                         </div>
                         <div class="subjectInfo">
-                            <div class="subjectName">Компьютерные сети</div>
+                            <div class="subjectName">Православная культура</div>
                             <div class="subjectInfoPart">
                                 <div class="infoIcon">
                                     <img alt="teacher" src="./private/assets/imgs/teacher.svg">
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Преподаватель</div>
-                                    <div class="subjectInfoPartDesc">Сивокобыленко Никита Владимирович</div>
+                                    <div class="subjectInfoPartDesc">Конобиевская Мария Ивановна</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -58,7 +58,7 @@
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Аудитория</div>
-                                    <div class="subjectInfoPartDesc">2206</div>
+                                    <div class="subjectInfoPartDesc">1203</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
