--- a/site/private/components/00312/0.html
+++ b/site/private/components/00312/0.html
@@ -5,14 +5,14 @@
                             <div class="subjectCounter-part2"></div>
                         </div>
                         <div class="subjectInfo">
-                            <div class="subjectName">Классный час</div>
+                            <div class="subjectName">УП.04 Учебная практика</div>
                             <div class="subjectInfoPart">
                                 <div class="infoIcon">
                                     <img alt="teacher" src="./private/assets/imgs/teacher.svg">
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Преподаватель</div>
-                                    <div class="subjectInfoPartDesc">Сивокобыленко Никита Владимирович</div>
+                                    <div class="subjectInfoPartDesc">Самойлов Александр Владимирович</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -21,7 +21,7 @@
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Аудитория</div>
-                                    <div class="subjectInfoPartDesc">3205</div>
+                                    <div class="subjectInfoPartDesc">дистант / не указано</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -30,7 +30,7 @@
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Подгруппа</div>
-                                    <div class="subjectInfoPartDesc" data-subject-group>нет информации</div>
+                                    <div class="subjectInfoPartDesc" data-subject-group>2</div>
                                 </div>
                             </div>
                         </div>
@@ -42,14 +42,14 @@
                             <div class="subjectCounter-part2"></div>
                         </div>
                         <div class="subjectInfo">
-                            <div class="subjectName">МДК.11.01 Технология разработки и защиты баз данных</div>
+                            <div class="subjectName">УП.04 Учебная практика</div>
                             <div class="subjectInfoPart">
                                 <div class="infoIcon">
                                     <img alt="teacher" src="./private/assets/imgs/teacher.svg">
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Преподаватель</div>
-                                    <div class="subjectInfoPartDesc">Коробова Мария Витальевна</div>
+                                    <div class="subjectInfoPartDesc">Самойлов Александр Владимирович</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -58,7 +58,7 @@
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Аудитория</div>
-                                    <div class="subjectInfoPartDesc">3206</div>
+                                    <div class="subjectInfoPartDesc">дистант / не указано</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -67,7 +67,7 @@
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Подгруппа</div>
-                                    <div class="subjectInfoPartDesc" data-subject-group>нет информации</div>
+                                    <div class="subjectInfoPartDesc" data-subject-group>2</div>
                                 </div>
                             </div>
                         </div>
@@ -79,7 +79,7 @@
                             <div class="subjectCounter-part2"></div>
                         </div>
                         <div class="subjectInfo">
-                            <div class="subjectName">МДК.04.02 Обеспечение качества функционирования компьютерных систем</div>
+                            <div class="subjectName">УП.04 Учебная практика</div>
                             <div class="subjectInfoPart">
                                 <div class="infoIcon">
                                     <img alt="teacher" src="./private/assets/imgs/teacher.svg">
@@ -95,7 +95,7 @@
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Аудитория</div>
-                                    <div class="subjectInfoPartDesc">3205</div>
+                                    <div class="subjectInfoPartDesc">дистант / не указано</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -104,7 +104,44 @@
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Подгруппа</div>
-                                    <div class="subjectInfoPartDesc" data-subject-group>нет информации</div>
+                                    <div class="subjectInfoPartDesc" data-subject-group>1</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                
+            <div class="scheduleSubjectItem">
+                        <div class="subjectCounterSide">
+                            <div class="subjectCounter-part1">3</div>
+                            <div class="subjectCounter-part2"></div>
+                        </div>
+                        <div class="subjectInfo">
+                            <div class="subjectName">УП.04 Учебная практика</div>
+                            <div class="subjectInfoPart">
+                                <div class="infoIcon">
+                                    <img alt="teacher" src="./private/assets/imgs/teacher.svg">
+                                </div>
+                                <div class="infoText">
+                                    <div class="subjectInfoPartHeader">Преподаватель</div>
+                                    <div class="subjectInfoPartDesc">Самойлов Александр Владимирович</div>
+                                </div>
+                            </div>
+                            <div class="subjectInfoPart">
+                                <div class="infoIcon">
+                                    <img alt="teacher" src="./private/assets/imgs/auditory.svg">
+                                </div>
+                                <div class="infoText">
+                                    <div class="subjectInfoPartHeader">Аудитория</div>
+                                    <div class="subjectInfoPartDesc">дистант / не указано</div>
+                                </div>
+                            </div>
+                            <div class="subjectInfoPart">
+                                <div class="infoIcon">
+                                    <img alt="teacher" src="./private/assets/imgs/group.svg">
+                                </div>
+                                <div class="infoText">
+                                    <div class="subjectInfoPartHeader">Подгруппа</div>
+                                    <div class="subjectInfoPartDesc" data-subject-group>2</div>
                                 </div>
                             </div>
                         </div>
@@ -116,14 +153,14 @@
                             <div class="subjectCounter-part2"></div>
                         </div>
                         <div class="subjectInfo">
-                            <div class="subjectName">Безопасность жизнедеятельности</div>
+                            <div class="subjectName">УП.04 Учебная практика</div>
                             <div class="subjectInfoPart">
                                 <div class="infoIcon">
                                     <img alt="teacher" src="./private/assets/imgs/teacher.svg">
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Преподаватель</div>
-                                    <div class="subjectInfoPartDesc">Путилин Валерий Александрович</div>
+                                    <div class="subjectInfoPartDesc">Сивокобыленко Никита Владимирович</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -132,7 +169,7 @@
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Аудитория</div>
-                                    <div class="subjectInfoPartDesc">3307</div>
+                                    <div class="subjectInfoPartDesc">дистант / не указано</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -141,7 +178,44 @@
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Подгруппа</div>
-                                    <div class="subjectInfoPartDesc" data-subject-group>нет информации</div>
+                                    <div class="subjectInfoPartDesc" data-subject-group>1</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                
+            <div class="scheduleSubjectItem">
+                        <div class="subjectCounterSide">
+                            <div class="subjectCounter-part1">5</div>
+                            <div class="subjectCounter-part2"></div>
+                        </div>
+                        <div class="subjectInfo">
+                            <div class="subjectName">УП.04 Учебная практика</div>
+                            <div class="subjectInfoPart">
+                                <div class="infoIcon">
+                                    <img alt="teacher" src="./private/assets/imgs/teacher.svg">
+                                </div>
+                                <div class="infoText">
+                                    <div class="subjectInfoPartHeader">Преподаватель</div>
+                                    <div class="subjectInfoPartDesc">Сивокобыленко Никита Владимирович</div>
+                                </div>
+                            </div>
+                            <div class="subjectInfoPart">
+                                <div class="infoIcon">
+                                    <img alt="teacher" src="./private/assets/imgs/auditory.svg">
+                                </div>
+                                <div class="infoText">
+                                    <div class="subjectInfoPartHeader">Аудитория</div>
+                                    <div class="subjectInfoPartDesc">дистант / не указано</div>
+                                </div>
+                            </div>
+                            <div class="subjectInfoPart">
+                                <div class="infoIcon">
+                                    <img alt="teacher" src="./private/assets/imgs/group.svg">
+                                </div>
+                                <div class="infoText">
+                                    <div class="subjectInfoPartHeader">Подгруппа</div>
+                                    <div class="subjectInfoPartDesc" data-subject-group>1</div>
                                 </div>
                             </div>
                         </div>
