--- a/site/private/components/00312/1.html
+++ b/site/private/components/00312/1.html
@@ -5,14 +5,14 @@
                             <div class="subjectCounter-part2"></div>
                         </div>
                         <div class="subjectInfo">
-                            <div class="subjectName">Безопасность жизнедеятельности</div>
+                            <div class="subjectName">Основы предпринимательства</div>
                             <div class="subjectInfoPart">
                                 <div class="infoIcon">
                                     <img alt="teacher" src="./private/assets/imgs/teacher.svg">
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Преподаватель</div>
-                                    <div class="subjectInfoPartDesc">Путилин Валерий Александрович</div>
+                                    <div class="subjectInfoPartDesc">Костина Наталья Александровна</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -42,14 +42,14 @@
                             <div class="subjectCounter-part2"></div>
                         </div>
                         <div class="subjectInfo">
-                            <div class="subjectName">Стандартизация, сертификация и техническое документоведение</div>
+                            <div class="subjectName">Безопасность жизнедеятельности</div>
                             <div class="subjectInfoPart">
                                 <div class="infoIcon">
                                     <img alt="teacher" src="./private/assets/imgs/teacher.svg">
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Преподаватель</div>
-                                    <div class="subjectInfoPartDesc">Коренев Павел Викторович</div>
+                                    <div class="subjectInfoPartDesc">Путилин Валерий Александрович</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
