--- a/site/private/components/00287/1.html
+++ b/site/private/components/00287/1.html
@@ -1,55 +1,18 @@
 
             <div class="scheduleSubjectItem">
                         <div class="subjectCounterSide">
-                            <div class="subjectCounter-part1">1</div>
-                            <div class="subjectCounter-part2"></div>
-                        </div>
-                        <div class="subjectInfo">
-                            <div class="subjectName">Основы алгоритмизации и программирования</div>
-                            <div class="subjectInfoPart">
-                                <div class="infoIcon">
-                                    <img alt="teacher" src="./private/assets/imgs/teacher.svg">
-                                </div>
-                                <div class="infoText">
-                                    <div class="subjectInfoPartHeader">Преподаватель</div>
-                                    <div class="subjectInfoPartDesc">Тимонова Светлана Сергеевна</div>
-                                </div>
-                            </div>
-                            <div class="subjectInfoPart">
-                                <div class="infoIcon">
-                                    <img alt="teacher" src="./private/assets/imgs/auditory.svg">
-                                </div>
-                                <div class="infoText">
-                                    <div class="subjectInfoPartHeader">Аудитория</div>
-                                    <div class="subjectInfoPartDesc">2204</div>
-                                </div>
-                            </div>
-                            <div class="subjectInfoPart">
-                                <div class="infoIcon">
-                                    <img alt="teacher" src="./private/assets/imgs/group.svg">
-                                </div>
-                                <div class="infoText">
-                                    <div class="subjectInfoPartHeader">Подгруппа</div>
-                                    <div class="subjectInfoPartDesc" data-subject-group>нет информации</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                
-            <div class="scheduleSubjectItem">
-                        <div class="subjectCounterSide">
                             <div class="subjectCounter-part1">2</div>
                             <div class="subjectCounter-part2"></div>
                         </div>
                         <div class="subjectInfo">
-                            <div class="subjectName">Основы алгоритмизации и программирования</div>
+                            <div class="subjectName">Безопасность жизнедеятельности</div>
                             <div class="subjectInfoPart">
                                 <div class="infoIcon">
                                     <img alt="teacher" src="./private/assets/imgs/teacher.svg">
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Преподаватель</div>
-                                    <div class="subjectInfoPartDesc">Тимонова Светлана Сергеевна</div>
+                                    <div class="subjectInfoPartDesc">Путилин Валерий Александрович</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -58,7 +21,7 @@
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Аудитория</div>
-                                    <div class="subjectInfoPartDesc">2204</div>
+                                    <div class="subjectInfoPartDesc">3105</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -79,14 +42,14 @@
                             <div class="subjectCounter-part2"></div>
                         </div>
                         <div class="subjectInfo">
-                            <div class="subjectName">Основы предпринимательства</div>
+                            <div class="subjectName">МДК.05.02 Разработка кода информационных систем</div>
                             <div class="subjectInfoPart">
                                 <div class="infoIcon">
                                     <img alt="teacher" src="./private/assets/imgs/teacher.svg">
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Преподаватель</div>
-                                    <div class="subjectInfoPartDesc">Костина Наталья Александровна</div>
+                                    <div class="subjectInfoPartDesc">Коробова Мария Витальевна</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -95,7 +58,7 @@
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Аудитория</div>
-                                    <div class="subjectInfoPartDesc">3302</div>
+                                    <div class="subjectInfoPartDesc">2210</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -116,14 +79,14 @@
                             <div class="subjectCounter-part2"></div>
                         </div>
                         <div class="subjectInfo">
-                            <div class="subjectName">Инострaнный язык</div>
+                            <div class="subjectName">Инженерная графика</div>
                             <div class="subjectInfoPart">
                                 <div class="infoIcon">
                                     <img alt="teacher" src="./private/assets/imgs/teacher.svg">
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Преподаватель</div>
-                                    <div class="subjectInfoPartDesc">Сердюкова Надежда Анатольевна</div>
+                                    <div class="subjectInfoPartDesc">Кармолицкая Людмила Александровна</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -132,7 +95,7 @@
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Аудитория</div>
-                                    <div class="subjectInfoPartDesc">1206</div>
+                                    <div class="subjectInfoPartDesc">2205</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -153,14 +116,14 @@
                             <div class="subjectCounter-part2"></div>
                         </div>
                         <div class="subjectInfo">
-                            <div class="subjectName">Инострaнный язык</div>
+                            <div class="subjectName">Инженерная графика</div>
                             <div class="subjectInfoPart">
                                 <div class="infoIcon">
                                     <img alt="teacher" src="./private/assets/imgs/teacher.svg">
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Преподаватель</div>
-                                    <div class="subjectInfoPartDesc">Должикова Галина Михайловна</div>
+                                    <div class="subjectInfoPartDesc">Кривцова Валентина Николаевна</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -169,7 +132,7 @@
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Аудитория</div>
-                                    <div class="subjectInfoPartDesc">3201</div>
+                                    <div class="subjectInfoPartDesc">2206</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
