--- a/site/private/components/00287/2.html
+++ b/site/private/components/00287/2.html
@@ -1,18 +1,18 @@
 
             <div class="scheduleSubjectItem">
                         <div class="subjectCounterSide">
-                            <div class="subjectCounter-part1">2</div>
+                            <div class="subjectCounter-part1">1</div>
                             <div class="subjectCounter-part2"></div>
                         </div>
                         <div class="subjectInfo">
-                            <div class="subjectName">Безопасность жизнедеятельности</div>
+                            <div class="subjectName">Стандартизация, сертификация и техническое документоведение</div>
                             <div class="subjectInfoPart">
                                 <div class="infoIcon">
                                     <img alt="teacher" src="./private/assets/imgs/teacher.svg">
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Преподаватель</div>
-                                    <div class="subjectInfoPartDesc">Путилин Валерий Александрович</div>
+                                    <div class="subjectInfoPartDesc">Нечаева Валентина Витальевна</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -38,55 +38,18 @@
                 
             <div class="scheduleSubjectItem">
                         <div class="subjectCounterSide">
-                            <div class="subjectCounter-part1">3</div>
+                            <div class="subjectCounter-part1">2</div>
                             <div class="subjectCounter-part2"></div>
                         </div>
                         <div class="subjectInfo">
-                            <div class="subjectName">Основы алгоритмизации и программирования</div>
+                            <div class="subjectName">МДК.05.03 Тестирование информационных систем</div>
                             <div class="subjectInfoPart">
                                 <div class="infoIcon">
                                     <img alt="teacher" src="./private/assets/imgs/teacher.svg">
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Преподаватель</div>
-                                    <div class="subjectInfoPartDesc">Тимонова Светлана Сергеевна</div>
-                                </div>
-                            </div>
-                            <div class="subjectInfoPart">
-                                <div class="infoIcon">
-                                    <img alt="teacher" src="./private/assets/imgs/auditory.svg">
-                                </div>
-                                <div class="infoText">
-                                    <div class="subjectInfoPartHeader">Аудитория</div>
-                                    <div class="subjectInfoPartDesc">2204</div>
-                                </div>
-                            </div>
-                            <div class="subjectInfoPart">
-                                <div class="infoIcon">
-                                    <img alt="teacher" src="./private/assets/imgs/group.svg">
-                                </div>
-                                <div class="infoText">
-                                    <div class="subjectInfoPartHeader">Подгруппа</div>
-                                    <div class="subjectInfoPartDesc" data-subject-group>нет информации</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                
-            <div class="scheduleSubjectItem">
-                        <div class="subjectCounterSide">
-                            <div class="subjectCounter-part1">4</div>
-                            <div class="subjectCounter-part2"></div>
-                        </div>
-                        <div class="subjectInfo">
-                            <div class="subjectName">Инженерная графика</div>
-                            <div class="subjectInfoPart">
-                                <div class="infoIcon">
-                                    <img alt="teacher" src="./private/assets/imgs/teacher.svg">
-                                </div>
-                                <div class="infoText">
-                                    <div class="subjectInfoPartHeader">Преподаватель</div>
-                                    <div class="subjectInfoPartDesc">Кармолицкая Людмила Александровна</div>
+                                    <div class="subjectInfoPartDesc">Шкондина Дарья Андреевна</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -104,7 +67,7 @@
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Подгруппа</div>
-                                    <div class="subjectInfoPartDesc" data-subject-group>1</div>
+                                    <div class="subjectInfoPartDesc" data-subject-group>нет информации</div>
                                 </div>
                             </div>
                         </div>
@@ -112,18 +75,18 @@
                 
             <div class="scheduleSubjectItem">
                         <div class="subjectCounterSide">
-                            <div class="subjectCounter-part1">4</div>
+                            <div class="subjectCounter-part1">3</div>
                             <div class="subjectCounter-part2"></div>
                         </div>
                         <div class="subjectInfo">
-                            <div class="subjectName">Инженерная графика</div>
+                            <div class="subjectName">Основы предпринимательства</div>
                             <div class="subjectInfoPart">
                                 <div class="infoIcon">
                                     <img alt="teacher" src="./private/assets/imgs/teacher.svg">
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Преподаватель</div>
-                                    <div class="subjectInfoPartDesc">Кривцова Валентина Николаевна</div>
+                                    <div class="subjectInfoPartDesc">Костина Наталья Александровна</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -132,7 +95,7 @@
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Аудитория</div>
-                                    <div class="subjectInfoPartDesc">2206</div>
+                                    <div class="subjectInfoPartDesc">3302</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -141,7 +104,7 @@
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Подгруппа</div>
-                                    <div class="subjectInfoPartDesc" data-subject-group>2</div>
+                                    <div class="subjectInfoPartDesc" data-subject-group>нет информации</div>
                                 </div>
                             </div>
                         </div>
