--- a/site/private/components/00287/3.html
+++ b/site/private/components/00287/3.html
@@ -1,7 +1,112 @@
 
-                <div class="noSubjectsScreen">
-                    <img alt="utya3" src="./private/assets/imgs/utya_confused.webp">
-                    <div class="h1">Пар не было найдено</div>
-                    <div class="h2">Возможно, данные пока не обновились</div>
-                </div>
+            <div class="scheduleSubjectItem">
+                        <div class="subjectCounterSide">
+                            <div class="subjectCounter-part1">1</div>
+                            <div class="subjectCounter-part2"></div>
+                        </div>
+                        <div class="subjectInfo">
+                            <div class="subjectName">МДК.05.02 Разработка кода информационных систем</div>
+                            <div class="subjectInfoPart">
+                                <div class="infoIcon">
+                                    <img alt="teacher" src="./private/assets/imgs/teacher.svg">
+                                </div>
+                                <div class="infoText">
+                                    <div class="subjectInfoPartHeader">Преподаватель</div>
+                                    <div class="subjectInfoPartDesc">Коробова Мария Витальевна</div>
+                                </div>
+                            </div>
+                            <div class="subjectInfoPart">
+                                <div class="infoIcon">
+                                    <img alt="teacher" src="./private/assets/imgs/auditory.svg">
+                                </div>
+                                <div class="infoText">
+                                    <div class="subjectInfoPartHeader">Аудитория</div>
+                                    <div class="subjectInfoPartDesc">2207</div>
+                                </div>
+                            </div>
+                            <div class="subjectInfoPart">
+                                <div class="infoIcon">
+                                    <img alt="teacher" src="./private/assets/imgs/group.svg">
+                                </div>
+                                <div class="infoText">
+                                    <div class="subjectInfoPartHeader">Подгруппа</div>
+                                    <div class="subjectInfoPartDesc" data-subject-group>нет информации</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                
+            <div class="scheduleSubjectItem">
+                        <div class="subjectCounterSide">
+                            <div class="subjectCounter-part1">2</div>
+                            <div class="subjectCounter-part2"></div>
+                        </div>
+                        <div class="subjectInfo">
+                            <div class="subjectName">Стандартизация, сертификация и техническое документоведение</div>
+                            <div class="subjectInfoPart">
+                                <div class="infoIcon">
+                                    <img alt="teacher" src="./private/assets/imgs/teacher.svg">
+                                </div>
+                                <div class="infoText">
+                                    <div class="subjectInfoPartHeader">Преподаватель</div>
+                                    <div class="subjectInfoPartDesc">Нечаева Валентина Витальевна</div>
+                                </div>
+                            </div>
+                            <div class="subjectInfoPart">
+                                <div class="infoIcon">
+                                    <img alt="teacher" src="./private/assets/imgs/auditory.svg">
+                                </div>
+                                <div class="infoText">
+                                    <div class="subjectInfoPartHeader">Аудитория</div>
+                                    <div class="subjectInfoPartDesc">1201</div>
+                                </div>
+                            </div>
+                            <div class="subjectInfoPart">
+                                <div class="infoIcon">
+                                    <img alt="teacher" src="./private/assets/imgs/group.svg">
+                                </div>
+                                <div class="infoText">
+                                    <div class="subjectInfoPartHeader">Подгруппа</div>
+                                    <div class="subjectInfoPartDesc" data-subject-group>нет информации</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                
+            <div class="scheduleSubjectItem">
+                        <div class="subjectCounterSide">
+                            <div class="subjectCounter-part1">3</div>
+                            <div class="subjectCounter-part2"></div>
+                        </div>
+                        <div class="subjectInfo">
+                            <div class="subjectName">Безопасность жизнедеятельности</div>
+                            <div class="subjectInfoPart">
+                                <div class="infoIcon">
+                                    <img alt="teacher" src="./private/assets/imgs/teacher.svg">
+                                </div>
+                                <div class="infoText">
+                                    <div class="subjectInfoPartHeader">Преподаватель</div>
+                                    <div class="subjectInfoPartDesc">Путилин Валерий Александрович</div>
+                                </div>
+                            </div>
+                            <div class="subjectInfoPart">
+                                <div class="infoIcon">
+                                    <img alt="teacher" src="./private/assets/imgs/auditory.svg">
+                                </div>
+                                <div class="infoText">
+                                    <div class="subjectInfoPartHeader">Аудитория</div>
+                                    <div class="subjectInfoPartDesc">3301</div>
+                                </div>
+                            </div>
+                            <div class="subjectInfoPart">
+                                <div class="infoIcon">
+                                    <img alt="teacher" src="./private/assets/imgs/group.svg">
+                                </div>
+                                <div class="infoText">
+                                    <div class="subjectInfoPartHeader">Подгруппа</div>
+                                    <div class="subjectInfoPartDesc" data-subject-group>нет информации</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 
