--- a/site/private/components/00291/3.html
+++ b/site/private/components/00291/3.html
@@ -1,7 +1,149 @@
 
-                <div class="noSubjectsScreen">
-                    <img alt="utya3" src="./private/assets/imgs/utya_confused.webp">
-                    <div class="h1">Пар не было найдено</div>
-                    <div class="h2">Возможно, данные пока не обновились</div>
-                </div>
+            <div class="scheduleSubjectItem">
+                        <div class="subjectCounterSide">
+                            <div class="subjectCounter-part1">2</div>
+                            <div class="subjectCounter-part2"></div>
+                        </div>
+                        <div class="subjectInfo">
+                            <div class="subjectName">Инострaнный язык</div>
+                            <div class="subjectInfoPart">
+                                <div class="infoIcon">
+                                    <img alt="teacher" src="./private/assets/imgs/teacher.svg">
+                                </div>
+                                <div class="infoText">
+                                    <div class="subjectInfoPartHeader">Преподаватель</div>
+                                    <div class="subjectInfoPartDesc">Должикова Галина Михайловна</div>
+                                </div>
+                            </div>
+                            <div class="subjectInfoPart">
+                                <div class="infoIcon">
+                                    <img alt="teacher" src="./private/assets/imgs/auditory.svg">
+                                </div>
+                                <div class="infoText">
+                                    <div class="subjectInfoPartHeader">Аудитория</div>
+                                    <div class="subjectInfoPartDesc">3201</div>
+                                </div>
+                            </div>
+                            <div class="subjectInfoPart">
+                                <div class="infoIcon">
+                                    <img alt="teacher" src="./private/assets/imgs/group.svg">
+                                </div>
+                                <div class="infoText">
+                                    <div class="subjectInfoPartHeader">Подгруппа</div>
+                                    <div class="subjectInfoPartDesc" data-subject-group>1</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                
+            <div class="scheduleSubjectItem">
+                        <div class="subjectCounterSide">
+                            <div class="subjectCounter-part1">2</div>
+                            <div class="subjectCounter-part2"></div>
+                        </div>
+                        <div class="subjectInfo">
+                            <div class="subjectName">Инострaнный язык</div>
+                            <div class="subjectInfoPart">
+                                <div class="infoIcon">
+                                    <img alt="teacher" src="./private/assets/imgs/teacher.svg">
+                                </div>
+                                <div class="infoText">
+                                    <div class="subjectInfoPartHeader">Преподаватель</div>
+                                    <div class="subjectInfoPartDesc">Лебеденко Анастасия Викторовна</div>
+                                </div>
+                            </div>
+                            <div class="subjectInfoPart">
+                                <div class="infoIcon">
+                                    <img alt="teacher" src="./private/assets/imgs/auditory.svg">
+                                </div>
+                                <div class="infoText">
+                                    <div class="subjectInfoPartHeader">Аудитория</div>
+                                    <div class="subjectInfoPartDesc">3208</div>
+                                </div>
+                            </div>
+                            <div class="subjectInfoPart">
+                                <div class="infoIcon">
+                                    <img alt="teacher" src="./private/assets/imgs/group.svg">
+                                </div>
+                                <div class="infoText">
+                                    <div class="subjectInfoPartHeader">Подгруппа</div>
+                                    <div class="subjectInfoPartDesc" data-subject-group>2</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                
+            <div class="scheduleSubjectItem">
+                        <div class="subjectCounterSide">
+                            <div class="subjectCounter-part1">3</div>
+                            <div class="subjectCounter-part2"></div>
+                        </div>
+                        <div class="subjectInfo">
+                            <div class="subjectName">МДК.04.02 Обеспечение качества функционирования компьютерных систем</div>
+                            <div class="subjectInfoPart">
+                                <div class="infoIcon">
+                                    <img alt="teacher" src="./private/assets/imgs/teacher.svg">
+                                </div>
+                                <div class="infoText">
+                                    <div class="subjectInfoPartHeader">Преподаватель</div>
+                                    <div class="subjectInfoPartDesc">Дьякова Анастасия Константиновна</div>
+                                </div>
+                            </div>
+                            <div class="subjectInfoPart">
+                                <div class="infoIcon">
+                                    <img alt="teacher" src="./private/assets/imgs/auditory.svg">
+                                </div>
+                                <div class="infoText">
+                                    <div class="subjectInfoPartHeader">Аудитория</div>
+                                    <div class="subjectInfoPartDesc">3203</div>
+                                </div>
+                            </div>
+                            <div class="subjectInfoPart">
+                                <div class="infoIcon">
+                                    <img alt="teacher" src="./private/assets/imgs/group.svg">
+                                </div>
+                                <div class="infoText">
+                                    <div class="subjectInfoPartHeader">Подгруппа</div>
+                                    <div class="subjectInfoPartDesc" data-subject-group>нет информации</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                
+            <div class="scheduleSubjectItem">
+                        <div class="subjectCounterSide">
+                            <div class="subjectCounter-part1">4</div>
+                            <div class="subjectCounter-part2"></div>
+                        </div>
+                        <div class="subjectInfo">
+                            <div class="subjectName">Безопасность жизнедеятельности</div>
+                            <div class="subjectInfoPart">
+                                <div class="infoIcon">
+                                    <img alt="teacher" src="./private/assets/imgs/teacher.svg">
+                                </div>
+                                <div class="infoText">
+                                    <div class="subjectInfoPartHeader">Преподаватель</div>
+                                    <div class="subjectInfoPartDesc">Миньков Кирилл Юрьевич</div>
+                                </div>
+                            </div>
+                            <div class="subjectInfoPart">
+                                <div class="infoIcon">
+                                    <img alt="teacher" src="./private/assets/imgs/auditory.svg">
+                                </div>
+                                <div class="infoText">
+                                    <div class="subjectInfoPartHeader">Аудитория</div>
+                                    <div class="subjectInfoPartDesc">2410</div>
+                                </div>
+                            </div>
+                            <div class="subjectInfoPart">
+                                <div class="infoIcon">
+                                    <img alt="teacher" src="./private/assets/imgs/group.svg">
+                                </div>
+                                <div class="infoText">
+                                    <div class="subjectInfoPartHeader">Подгруппа</div>
+                                    <div class="subjectInfoPartDesc" data-subject-group>нет информации</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 
