--- a/site/private/components/00311/2.html
+++ b/site/private/components/00311/2.html
@@ -5,14 +5,14 @@
                             <div class="subjectCounter-part2"></div>
                         </div>
                         <div class="subjectInfo">
-                            <div class="subjectName">Индивидуальный проект</div>
+                            <div class="subjectName">Теория вероятностей и математическая статистика</div>
                             <div class="subjectInfoPart">
                                 <div class="infoIcon">
                                     <img alt="teacher" src="./private/assets/imgs/teacher.svg">
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Преподаватель</div>
-                                    <div class="subjectInfoPartDesc">Ильминский Константин Викторович</div>
+                                    <div class="subjectInfoPartDesc">Тимонова Светлана Сергеевна</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -21,7 +21,7 @@
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Аудитория</div>
-                                    <div class="subjectInfoPartDesc">2316</div>
+                                    <div class="subjectInfoPartDesc">2204</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -42,14 +42,14 @@
                             <div class="subjectCounter-part2"></div>
                         </div>
                         <div class="subjectInfo">
-                            <div class="subjectName">Истoрия</div>
+                            <div class="subjectName">ОУД. Математика</div>
                             <div class="subjectInfoPart">
                                 <div class="infoIcon">
                                     <img alt="teacher" src="./private/assets/imgs/teacher.svg">
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Преподаватель</div>
-                                    <div class="subjectInfoPartDesc">Борисов Владислав Александрович</div>
+                                    <div class="subjectInfoPartDesc">Ильминский Константин Викторович</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -58,7 +58,7 @@
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Аудитория</div>
-                                    <div class="subjectInfoPartDesc">2308</div>
+                                    <div class="subjectInfoPartDesc">2316</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
