--- a/site/private/components/00312/2.html
+++ b/site/private/components/00312/2.html
@@ -5,14 +5,14 @@
                             <div class="subjectCounter-part2"></div>
                         </div>
                         <div class="subjectInfo">
-                            <div class="subjectName">Основы предпринимательства</div>
+                            <div class="subjectName">Инострaнный язык</div>
                             <div class="subjectInfoPart">
                                 <div class="infoIcon">
                                     <img alt="teacher" src="./private/assets/imgs/teacher.svg">
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Преподаватель</div>
-                                    <div class="subjectInfoPartDesc">Костина Наталья Александровна</div>
+                                    <div class="subjectInfoPartDesc">Сердюкова Надежда Анатольевна</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -30,7 +30,44 @@
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Подгруппа</div>
-                                    <div class="subjectInfoPartDesc" data-subject-group>нет информации</div>
+                                    <div class="subjectInfoPartDesc" data-subject-group>1</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                
+            <div class="scheduleSubjectItem">
+                        <div class="subjectCounterSide">
+                            <div class="subjectCounter-part1">2</div>
+                            <div class="subjectCounter-part2"></div>
+                        </div>
+                        <div class="subjectInfo">
+                            <div class="subjectName">Инострaнный язык</div>
+                            <div class="subjectInfoPart">
+                                <div class="infoIcon">
+                                    <img alt="teacher" src="./private/assets/imgs/teacher.svg">
+                                </div>
+                                <div class="infoText">
+                                    <div class="subjectInfoPartHeader">Преподаватель</div>
+                                    <div class="subjectInfoPartDesc">Должикова Галина Михайловна</div>
+                                </div>
+                            </div>
+                            <div class="subjectInfoPart">
+                                <div class="infoIcon">
+                                    <img alt="teacher" src="./private/assets/imgs/auditory.svg">
+                                </div>
+                                <div class="infoText">
+                                    <div class="subjectInfoPartHeader">Аудитория</div>
+                                    <div class="subjectInfoPartDesc">дистант / не указано</div>
+                                </div>
+                            </div>
+                            <div class="subjectInfoPart">
+                                <div class="infoIcon">
+                                    <img alt="teacher" src="./private/assets/imgs/group.svg">
+                                </div>
+                                <div class="infoText">
+                                    <div class="subjectInfoPartHeader">Подгруппа</div>
+                                    <div class="subjectInfoPartDesc" data-subject-group>2</div>
                                 </div>
                             </div>
                         </div>
@@ -42,14 +79,14 @@
                             <div class="subjectCounter-part2"></div>
                         </div>
                         <div class="subjectInfo">
-                            <div class="subjectName">Безопасность жизнедеятельности</div>
+                            <div class="subjectName">Стандартизация, сертификация и техническое документоведение</div>
                             <div class="subjectInfoPart">
                                 <div class="infoIcon">
                                     <img alt="teacher" src="./private/assets/imgs/teacher.svg">
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Преподаватель</div>
-                                    <div class="subjectInfoPartDesc">Путилин Валерий Александрович</div>
+                                    <div class="subjectInfoPartDesc">Коренев Павел Викторович</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -79,14 +116,14 @@
                             <div class="subjectCounter-part2"></div>
                         </div>
                         <div class="subjectInfo">
-                            <div class="subjectName">МДК.04.02 Обеспечение качества функционирования компьютерных систем</div>
+                            <div class="subjectName">Безопасность жизнедеятельности</div>
                             <div class="subjectInfoPart">
                                 <div class="infoIcon">
                                     <img alt="teacher" src="./private/assets/imgs/teacher.svg">
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Преподаватель</div>
-                                    <div class="subjectInfoPartDesc">Дьякова Анастасия Константиновна</div>
+                                    <div class="subjectInfoPartDesc">Путилин Валерий Александрович</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
