--- a/site/private/components/00332/1.html
+++ b/site/private/components/00332/1.html
@@ -5,14 +5,14 @@
                             <div class="subjectCounter-part2"></div>
                         </div>
                         <div class="subjectInfo">
-                            <div class="subjectName">Физика</div>
+                            <div class="subjectName">Информатика</div>
                             <div class="subjectInfoPart">
                                 <div class="infoIcon">
                                     <img alt="teacher" src="./private/assets/imgs/teacher.svg">
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Преподаватель</div>
-                                    <div class="subjectInfoPartDesc">Никонова Наталья Олеговна</div>
+                                    <div class="subjectInfoPartDesc">Дьякова Анастасия Константиновна</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -21,7 +21,7 @@
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Аудитория</div>
-                                    <div class="subjectInfoPartDesc">дистант / не указано</div>
+                                    <div class="subjectInfoPartDesc">3104</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -42,14 +42,14 @@
                             <div class="subjectCounter-part2"></div>
                         </div>
                         <div class="subjectInfo">
-                            <div class="subjectName">Основы безопасности и защиты Родины</div>
+                            <div class="subjectName">Физика</div>
                             <div class="subjectInfoPart">
                                 <div class="infoIcon">
                                     <img alt="teacher" src="./private/assets/imgs/teacher.svg">
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Преподаватель</div>
-                                    <div class="subjectInfoPartDesc">Беляева Галина Васильевна</div>
+                                    <div class="subjectInfoPartDesc">Никонова Наталья Олеговна</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -58,7 +58,7 @@
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Аудитория</div>
-                                    <div class="subjectInfoPartDesc">дистант / не указано</div>
+                                    <div class="subjectInfoPartDesc">1407</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -79,14 +79,14 @@
                             <div class="subjectCounter-part2"></div>
                         </div>
                         <div class="subjectInfo">
-                            <div class="subjectName">Инострaнный язык</div>
+                            <div class="subjectName">Истoрия</div>
                             <div class="subjectInfoPart">
                                 <div class="infoIcon">
                                     <img alt="teacher" src="./private/assets/imgs/teacher.svg">
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Преподаватель</div>
-                                    <div class="subjectInfoPartDesc">Сердюкова Надежда Анатольевна</div>
+                                    <div class="subjectInfoPartDesc">Рыжих Наталья Александровна</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -95,7 +95,7 @@
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Аудитория</div>
-                                    <div class="subjectInfoPartDesc">дистант / не указано</div>
+                                    <div class="subjectInfoPartDesc">1410</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -104,44 +104,7 @@
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Подгруппа</div>
-                                    <div class="subjectInfoPartDesc" data-subject-group>1</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                
-            <div class="scheduleSubjectItem">
-                        <div class="subjectCounterSide">
-                            <div class="subjectCounter-part1">3</div>
-                            <div class="subjectCounter-part2"></div>
-                        </div>
-                        <div class="subjectInfo">
-                            <div class="subjectName">Инострaнный язык</div>
-                            <div class="subjectInfoPart">
-                                <div class="infoIcon">
-                                    <img alt="teacher" src="./private/assets/imgs/teacher.svg">
-                                </div>
-                                <div class="infoText">
-                                    <div class="subjectInfoPartHeader">Преподаватель</div>
-                                    <div class="subjectInfoPartDesc">Должикова Галина Михайловна</div>
-                                </div>
-                            </div>
-                            <div class="subjectInfoPart">
-                                <div class="infoIcon">
-                                    <img alt="teacher" src="./private/assets/imgs/auditory.svg">
-                                </div>
-                                <div class="infoText">
-                                    <div class="subjectInfoPartHeader">Аудитория</div>
-                                    <div class="subjectInfoPartDesc">дистант / не указано</div>
-                                </div>
-                            </div>
-                            <div class="subjectInfoPart">
-                                <div class="infoIcon">
-                                    <img alt="teacher" src="./private/assets/imgs/group.svg">
-                                </div>
-                                <div class="infoText">
-                                    <div class="subjectInfoPartHeader">Подгруппа</div>
-                                    <div class="subjectInfoPartDesc" data-subject-group>2</div>
+                                    <div class="subjectInfoPartDesc" data-subject-group>нет информации</div>
                                 </div>
                             </div>
                         </div>
